Refactor days 1-3